---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let x: Result<i64, bool> = Result::Ok(42);\n    let y = match x {\n        Result::Ok(v) => {\n            v\n        },\n        Result::Err(e) => {\n            0\n        },\n    };\n}\n"
---
T-Fn: test => ()
  T-Let: {test: fn() -> ()} ⊢ let x: Result<i64, bool> = Result::Ok(42); ⇒ Result<i64, bool>
    T-Call: {test: fn() -> ()} ⊢ Result::Ok(42) ⇒ Result
      T-Var: {test: fn() -> ()} ⊢ Result::Ok ⇒ fn(t3) -> Result
      T-Int: {test: fn() -> ()} ⊢ 42 ⇒ i64
      Unify-Var: i64 ~ t3 => {i64/t5}
    Unify-Enum: Result<i64, bool> ~ Result => {bool/t4, i64/t3}
      Unify-Var: i64 ~ i64 => {i64/t3}
      Unify-Var: bool ~ t4 => {bool/t4}
  T-Let: {test: fn() -> (), x: Result<i64, bool>} ⊢ let y = match x {
    Result::Ok(v) => {
        v
    },
    Result::Err(e) => {
        0
    },
}; ⇒ i64
    T-Match: {test: fn() -> (), x: Result<i64, bool>} ⊢ match x {
    Result::Ok(v) => {
        v
    },
    Result::Err(e) => {
        0
    },
} ⇒ i64
      T-Var: {test: fn() -> (), x: Result<i64, bool>} ⊢ x ⇒ Result<i64, bool>
      Unify-Enum: Result<i64, bool> ~ Result => {bool/t2, i64/t1}
        Unify-Var: i64 ~ t1 => {i64/t1}
        Unify-Var: bool ~ t2 => {bool/t2}
      T-Tail: v => i64
        T-Var: {test: fn() -> (), v: i64, x: Result<i64, bool>} ⊢ v ⇒ i64
      Unify-Enum: Result<i64, bool> ~ Result => {}
        Unify-Const: i64 ~ i64 => {}
        Unify-Const: bool ~ bool => {}
      T-Tail: 0 => i64
        T-Int: {e: bool, test: fn() -> (), x: Result<i64, bool>} ⊢ 0 ⇒ i64
      Unify-Var: i64 ~ i64 => i64
